added search functionality using API

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div><p>
           Thursday 11:37, cloudy
           <br />
-         <div> 15°C ☁️ </div>
+         <div class="weather-app-temperature" id="temperature"> 15°C ☁️ </div>
           <br />
           Humidity: 66%, Wind: 3.13km/h
         </p></div>
